# customersupportresolution

./: docker-compose.observability.yml  hiddens.txt  main.py  pyproject.toml
agents/: ContextBuilderAgent.py  DecisionAgent.py  EscalationAgent.py  FallbackAgent.py  GreetingDetector.py  IntentAgent.py  PolicyAgent.py  RAGAgent.py  RAGRetrievalAgent.py  ResponseAgent.py  SentimentAgent.py  TicketActionAgent.py  ToolExecutionAgent.py  VannaAgent.py  WebSearchAgent.py
chatgpt-documentations/: Agents Required.md  GLOBAL STATE SCHEMA.md  GRAPH INTEGRATION CHECKLIST.md  STANDARD AGENT CONTRACT TEMPLATE.md  SYSTEM_EXECUTION_FLOW.md  agents gpt chat nedded.md
config/: intents.json  mcdonalds.py  sentiments.json  zomato.py
core/: BaseAgent.py  BaseTools.py  ConfigLoader.py  ConversationState.py  GraphEngine.py  GraphNodes.py  GraphRouting.py  GraphValidator.py  Orchestrator.py  PatchValidator.py  PromptLoader.py  StateManager.py  ToolRegistry.py  orchestrator.py
data/: TRAINING_TEST_GUIDE.md  amazon_faqs.json
data/faq/amazon/: faq.md
data/faq/flipkart/: faq.txt
data/faq/shopify/: faq.md
data/knowledge/: amazon_faq.md  customer_qa.json  flipkart_returns.txt
data/knowledge/amazon/: refund_policy.md
data/knowledge/flipkart/: shipping_info.txt
data/knowledge/shopify/: merchant_guide.md
docs/: AGENT_INTEGRATION_STATUS.md  CONTEXT_BUILDER_AGENT_IMPLEMENTATION_PLAN.md  CUSTOMER_SUPPORT_RESOLUTION_ARCHITECTURE.md  POLICY_AGENT_IMPLEMENTATION_PLAN.md  RAG_AGENT_IMPLEMENTATION_PLAN.md  SENTIMENT_AGENT_VERIFICATION.md
llms/: BaseLLM.py  LLMFactory.py  LLMManager.py  OutputParser.py
llms/clients/: GroqClient.py  OpenRouterClient.py
llms/managers/: AzureOpenAIManager.py  ClaudeManager.py  GeminiManager.py  OpenAICompatibleManager.py  OpenAIManager.py
models/: chat.py  intent.py  llm.py  patch.py  sections.py  tool.py
observability/: __init__.py  langfuse_tracer.py  metrics.py  otel_tracer.py  structured_logger.py  tracing_context.py
observability/config/: prometheus.yml
prompts/: intent_system.txt
prompts/ContextBuilderAgent/: v1.txt
prompts/EscalationAgent/: v1.txt
prompts/IntentAgent/: v1.txt
prompts/PolicyAgent/: v1.txt
prompts/SentimentAgent/: v1.txt
prompts/TicketActionAgent/: v1.txt
prompts/escalation/: v1.txt
prompts/intent/: v1.txt
prompts/policy/: v1.txt
prompts/rag/: v1.txt
prompts/response/: v1.txt
prompts/sentiment/: v1.txt
prompts/vanna/: v1.txt
prompts/websearch/: v1.txt
routes/: chat.py  faq.py  observability.py  training.py
schemas/: chat.py  intent.py  rag.py  response.py  sentiment.py  state.py
scripts/: ingest_amazon_faqs.py
services/: BootstrapService.py  ChatService.py  ConfigService.py  DocumentIngester.py  FAQService.py  ResponseBuilder.py  TrainingRAGAgent.py
tools/: ApiTool.py  EmailTool.py  FAQLookupTool.py  FAQTool.py  TicketCreationTool.py  WebSearchTool.py  __init__.py
utils/: Config.py  DBManager.py  DocumentParser.py  DocumentProcessor.py  EmbeddingManager.py  Embeddings.py  FAQProcessor.py  FileConfigLoader.py  FilePromptLoader.py  QdrantManager.py  Reranker.py  RerankerManager.py  VectorStore.py  encryption.py
(+2 files in other folders)
