[project]
name = "customersupportresolution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.7",
    "groq>=1.0.0",
    "langgraph>=1.0.8",
    "langfuse>=2.0.0",
    "llama-index>=0.14.14",
    "openai>=2.20.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-instrumentation-asgi>=0.45b0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-logging>=0.45b0",
    "opentelemetry-instrumentation-requests>=0.45b0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-semantic-conventions>=0.45b0",
    "structlog>=24.1.0",
    "uvicorn[standard]>=0.40.0",
]
