[project]
name = "customersupportresolution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.7",
    "groq>=1.0.0",
    "langgraph>=1.0.8",
    "langfuse>=2.0.0",
    "llama-index>=0.14.14",
    "openai>=2.20.0",
    # OpenTelemetry distributed tracing
    "opentelemetry-api>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-instrumentation-asgi>=0.45b0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-logging>=0.45b0",
    "opentelemetry-instrumentation-requests>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-semantic-conventions>=0.45b0",
    # Observability
    "prometheus-client>=0.21.0",
    "structlog>=24.1.0",
    "uvicorn[standard]>=0.40.0",
    # RAG and embeddings
    "sentence-transformers>=5.2.3",
    "qdrant-client>=1.17.0",
    "flashrank>=0.2.10",
    # Document parsing and OCR
    "doctr[torch]>=1.9.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "chardet>=5.0.0",
    "pillow>=9.0.0",
    "vanna>=2.0.2",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.22",
    "supabase>=2.28.2",
    # LangChain for document processing
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    # Cohere for reranking
    "cohere>=5.0.0",
    # HTTP client for API calls
    "httpx>=0.27.0",
    # Environment variables
    "python-dotenv>=1.0.0",
]
